Updated clang-format invocation. Added a macro test script.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,7 +5,10 @@ project(DemoProject VERSION 1.0.0)
 
 configure_file(${PROJECT_SOURCE_DIR}/include/demo_version_private.h.in demo_version_private.h)
 
-# First, include any global configuration library
+include(test-script.cmake)
+test_macro(THISISTHEVALUE ANOTHER_VALUE)
+
+# Include any global configuration library
 add_subdirectory(configuration)
 
 # Now, set the configuration you selected as the one that subsequent  libs depend on
